--- a/remote.html
+++ b/remote.html
@@ -19,16 +19,14 @@ button.searchBtn:hover{ background:#e52a2f; }
 .item:hover{ background:#ffd6d6; }
 .item img{ width:80px; height:60px; object-fit:cover; margin-right:12px; border-radius:6px; }
 .title{ font-size:0.95em; line-height:1.2em; flex:1; color:#ff3b3f; }
-.playlist{ margin-top:15px; }
-.playlist-item{ display:flex; align-items:center; justify-content:space-between; margin-top:8px; background:#fff0f0; padding:6px 8px; border-radius:6px; }
-.playlist-item button{ margin-left:5px; padding:2px 6px; border:none; border-radius:4px; cursor:pointer; font-size:12px; background:#ff3b3f; color:#fff; }
-.playlist-item button:hover{ background:#e52a2f; }
 #status{ margin-top:10px; font-size:0.9em; }
+#playlist{ margin-top:10px; display:flex; flex-wrap:wrap; gap:5px; }
+.playlist-item{ background:#ffecec; padding:4px 6px; border-radius:4px; display:flex; align-items:center; gap:5px; font-size:0.85em; }
+.playlist-item button{ background:#ff3b3f; border:none; color:#fff; cursor:pointer; border-radius:3px; padding:0 4px; font-size:0.75em; }
 .controls{ display:flex; gap:10px; margin-top:15px; flex-wrap:wrap; }
 .controls button{ flex:1; border-radius:6px; font-size:15px; border:none; background:#ff3b3f; color:#fff; cursor:pointer; }
 .controls button:hover{ background:#e52a2f; }
 #volumeSlider{ flex:2; margin-top:10px; }
-#notify{ position:absolute; top:10px; left:10px; background:rgba(0,0,0,0.6); color:#0f0; padding:6px 10px; border-radius:6px; font-weight:bold; white-space:nowrap; opacity:0; transition:0.5s; z-index:999; }
 </style>
 </head>
 <body>
@@ -51,11 +49,8 @@ button.searchBtn:hover{ background:#e52a2f; }
     <label for="karaokeOnly">Chỉ Karaoke</label>
   </div>
   <div id="status"></div>
+  <div id="playlist"></div>
   <div id="list"></div>
-
-  <h2>📃 Playlist</h2>
-  <div class="playlist" id="playlist"></div>
-
   <div class="controls">
     <button id="muteBtn">🔇 Tắt/Bật âm thanh</button>
     <input type="range" min="0" max="100" value="100" id="volumeSlider">
@@ -64,11 +59,9 @@ button.searchBtn:hover{ background:#e52a2f; }
   </div>
 </div>
 
-<div id="notify"></div>
-
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+import { getDatabase, ref, set, onValue, push, remove } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
 
 const firebaseConfig = { 
   apiKey: "AIzaSyC1JW_dg-YChaizarbS-7UUN3njFomMPvI",
@@ -80,12 +73,13 @@ const firebaseConfig = {
   appId: "1:183555717781:web:d3920b342c5d27e107f99c",
   measurementId: "G-VZ228HB7GF"
 };
-
 const API_KEY = "AIzaSyALYcXF9pG01RbeCx6DaZADNwNro2NKq4I";
+
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 const commandRef = ref(db, "command");
 const connectionRef = ref(db, "connectionStatus");
+const playlistRef = ref(db, "playlist");
 
 // DOM
 const qInput=document.getElementById("q");
@@ -93,98 +87,78 @@ const searchBtn=document.getElementById("searchBtn");
 const stopBtn=document.getElementById("stopBtn");
 const listEl=document.getElementById("list");
 const statusEl=document.getElementById("status");
+const playlistEl=document.getElementById("playlist");
 const muteBtn=document.getElementById("muteBtn");
 const volumeSlider=document.getElementById("volumeSlider");
 const connectBtn=document.getElementById("connectBtn");
 const disconnectBtn=document.getElementById("disconnectBtn");
-const playlistEl=document.getElementById("playlist");
-const notifyEl=document.getElementById("notify");
-
 let muteState=false;
-let playlist=[];
-let currentIndex=-1;
 
-// --- Notification
-function showNotification(text){
-  notifyEl.textContent=text;
-  notifyEl.style.opacity=1;
-  notifyEl.style.transform="translateX(0)";
-  setTimeout(()=>{ notifyEl.style.opacity=0; notifyEl.style.transform="translateX(-100%)"; },5000);
-}
-
-// --- Ngày giờ & Refresh
+// Ngày giờ & Refresh
 const dateTimeEl=document.getElementById("dateTime");
 const refreshBtn=document.getElementById("refreshBtn");
-function updateDateTime(){ dateTimeEl.textContent=(new Date()).toLocaleString(); }
+function updateDateTime(){ const now=new Date(); dateTimeEl.textContent=now.toLocaleString(); }
 setInterval(updateDateTime,1000);
 updateDateTime();
-refreshBtn.onclick=()=>location.reload();
+refreshBtn.addEventListener("click",()=>location.reload());
 
-// --- Render playlist
-function renderPlaylist(){
+// Playlist
+function renderPlaylist(list){
   playlistEl.innerHTML="";
-  playlist.forEach((v,i)=>{
-    const el=document.createElement("div");
-    el.className="playlist-item";
-    el.innerHTML=`<span>${v.title}</span>
-                  <div>
-                  <button onclick="playIndex(${i})">▶️</button>
-                  <button onclick="priorityIndex(${i})">⚡</button>
-                  <button onclick="removeIndex(${i})">❌</button>
-                  </div>`;
-    playlistEl.appendChild(el);
+  list.forEach((item,index)=>{
+    const div=document.createElement("div");
+    div.className="playlist-item";
+    div.innerHTML=`${item.title} 
+      <button data-index="${index}" class="priorityBtn">⬆️</button>
+      <button data-index="${index}" class="deleteBtn">❌</button>`;
+    playlistEl.appendChild(div);
   });
-  updatePlaylistStatus();
+
+  // Nút ưu tiên
+  playlistEl.querySelectorAll(".priorityBtn").forEach(btn=>{
+    btn.addEventListener("click",()=>{
+      const idx=Number(btn.dataset.index);
+      const newList=[list[idx], ...list.filter((_,i)=>i!==idx)];
+      set(playlistRef, newList);
+    });
+  });
+
+  // Nút xóa
+  playlistEl.querySelectorAll(".deleteBtn").forEach(btn=>{
+    btn.addEventListener("click",()=>{
+      const idx=Number(btn.dataset.index);
+      const newList=list.filter((_,i)=>i!==idx);
+      set(playlistRef,newList);
+    });
+  });
 }
 
-// --- Play next
-function playNext(){
-  if(currentIndex+1<playlist.length){
-    currentIndex++;
-    const vid=playlist[currentIndex];
-    set(commandRef,{id:vid.id,title:vid.title,play:true,mute:muteState,roomId:localStorage.getItem("roomId")});
+// Listen playlist
+onValue(playlistRef,snapshot=>{
+  const list=snapshot.val() || [];
+  renderPlaylist(list);
+  if(list.length>0){
+    const next= list[0];
+    set(commandRef,{id:next.id,title:next.title,play:true,mute:muteState,roomId:localStorage.getItem("roomId")});
   }
-  updatePlaylistStatus();
-}
+});
 
-// --- Play specific index
-window.playIndex=(i)=>{
-  currentIndex=i-1; // playNext sẽ +1
-  playNext();
-};
+// Update playlist status 1 phút 1 lần
+setInterval(()=>{
+  onValue(playlistRef,snapshot=>{
+    const list=snapshot.val() || [];
+    statusEl.textContent=`📃 Số bài còn lại: ${list.length} | Bài tiếp theo: ${list[0]?.title||"Không có"}`;
+  });
+},60000);
 
-// --- Priority
-window.priorityIndex=(i)=>{
-  if(i>currentIndex){
-    const item=playlist.splice(i,1)[0];
-    playlist.splice(currentIndex+1,0,item);
-    renderPlaylist();
-  }
-};
-
-// --- Remove
-window.removeIndex=(i)=>{
-  playlist.splice(i,1);
-  if(i<=currentIndex) currentIndex--;
-  renderPlaylist();
-};
-
-// --- Update playlist status
-function updatePlaylistStatus(){
-  if(currentIndex<0 || playlist.length===0) return;
-  const remaining=playlist.length-currentIndex-1;
-  statusEl.textContent=`▶️ Đang phát: ${playlist[currentIndex].title} | Còn lại: ${remaining} bài`;
-}
-setInterval(updatePlaylistStatus,60000);
-
-// --- Search YouTube
+// Search YouTube
 async function search(){
   const q=qInput.value.trim();
   const karaokeOnly=document.getElementById("karaokeOnly").checked;
   if(!q) return alert("Nhập từ khóa!");
   listEl.innerHTML=""; statusEl.textContent="🔍 Đang tìm kiếm...";
   try{
-    const res=await fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${encodeURIComponent(q+(karaokeOnly?" karaoke":""))}&videoEmbeddable=true&key=${API_KEY}`);
+    const res=await fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${encodeURIComponent(q + (karaokeOnly?" karaoke":""))}&videoEmbeddable=true&key=${API_KEY}`);
     const data=await res.json();
     statusEl.textContent="";
     if(!data.items || data.items.length===0){ statusEl.textContent="Không tìm thấy kết quả."; return; }
@@ -193,31 +167,46 @@ async function search(){
       const el=document.createElement("div");
       el.className="item";
       el.innerHTML=`<img src="${v.snippet.thumbnails.medium.url}"><div class="title">${v.snippet.title}</div>`;
-      el.onclick=()=>{
-        playlist.push({id:v.id.videoId,title:v.snippet.title});
-        renderPlaylist();
-        showNotification("Đã thêm: "+v.snippet.title);
-        if(currentIndex===-1) playNext();
-      };
+      el.addEventListener("click",()=>{
+        playlistRef.get().then(snapshot=>{
+          const list=snapshot.val()||[];
+          const exists=list.some(i=>i.id===v.id.videoId);
+          const newList=[...list,{id:v.id.videoId,title:v.snippet.title}];
+          set(playlistRef,newList);
+          statusEl.textContent=`✅ Đã thêm: ${v.snippet.title}`;
+        });
+      });
       listEl.appendChild(el);
     });
   }catch(err){ console.error(err); statusEl.textContent="⚠️ Lỗi khi tìm kiếm!"; }
 }
-searchBtn.onclick=search;
+searchBtn.addEventListener("click", search);
 qInput.addEventListener("keypress",e=>{if(e.key==="Enter") search();});
 
-// --- Controls
-stopBtn.onclick=()=>{ set(commandRef,{id:"",title:"Intro / Slide",play:false,mute:muteState,roomId:localStorage.getItem("roomId")); currentIndex=-1; };
-muteBtn.onclick=()=>{ muteState=!muteState; set(commandRef,{mute:muteState,roomId:localStorage.getItem("roomId")}); muteBtn.textContent=muteState?"🔊 Bật âm thanh":"🔇 Tắt âm thanh"; };
-volumeSlider.oninput=()=>{ set(commandRef,{volume:Number(volumeSlider.value),roomId:localStorage.getItem("roomId")}); };
+// Controls
+stopBtn.addEventListener("click",()=>{ set(commandRef,{id:"",title:"Intro / Slide",play:false,mute:muteState,roomId:localStorage.getItem("roomId")}); statusEl.textContent="⏹️ Đã dừng phát"; });
+muteBtn.addEventListener("click",()=>{ muteState=!muteState; set(commandRef,{mute:muteState,roomId:localStorage.getItem("roomId")}); muteBtn.textContent=muteState?"🔊 Bật âm thanh":"🔇 Tắt âm thanh"; });
+volumeSlider.addEventListener("input",()=>{ set(commandRef,{volume:Number(volumeSlider.value),roomId:localStorage.getItem("roomId")}); });
 
-// --- Connect / Disconnect
-connectBtn.onclick=()=>{ let room=prompt("Nhập Room ID (6 số) để kết nối:"); if(!room||!/^\d{6}$/.test(room)){alert("Phải nhập đúng Room ID 6 số!"); return;} localStorage.setItem("roomId",room); set(connectionRef,{connected:true,roomId:room}).then(()=>alert("✅ Đã kết nối Room: "+room)); };
-disconnectBtn.onclick=()=>{ let room=localStorage.getItem("roomId"); if(!room){alert("Chưa có Room nào kết nối!"); return;} set(connectionRef,{connected:false,roomId:""}).then(()=>{localStorage.removeItem("roomId"); alert("❌ Đã ngắt kết nối Room: "+room);}); };
+// Connect / Disconnect
+connectBtn.addEventListener("click",()=>{
+  let room=prompt("Nhập Room ID (6 số) để kết nối:");
+  if(!room||!/^\d{6}$/.test(room)){alert("Phải nhập đúng Room ID 6 số!"); return;}
+  localStorage.setItem("roomId",room); set(connectionRef,{connected:true,roomId:room}).then(()=>alert("✅ Đã kết nối Room: "+room));
+});
+disconnectBtn.addEventListener("click",()=>{
+  let room=localStorage.getItem("roomId");
+  if(!room){alert("Chưa có Room nào kết nối!"); return;}
+  set(connectionRef,{connected:false,roomId:""}).then(()=>{localStorage.removeItem("roomId"); alert("❌ Đã ngắt kết nối Room: "+room);});
+});
 
-// --- Update command from Screen
-onValue(commandRef,snapshot=>{ const cmd=snapshot.val(); if(!cmd) return; muteBtn.textContent=cmd.mute?"🔊 Bật âm thanh":"🔇 Tắt âm thanh"; volumeSlider.value=cmd.volume??100; });
-
+// Update command from Screen
+onValue(commandRef,snapshot=>{
+  const cmd=snapshot.val();
+  if(!cmd) return;
+  muteBtn.textContent=cmd.mute?"🔊 Bật âm thanh":"🔇 Tắt âm thanh";
+  volumeSlider.value=cmd.volume??100;
+});
 </script>
 </body>
 </html>
